--- a/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <a class="nav-link" href="/learnBlazor/BindProp">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Bind Prop 22
+            </a>
+        </div>
     </nav>
 </div>
 
