--- a/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
@@ -28,7 +28,7 @@
 
         <div class="nav-item px-3">
             <a class="nav-link" href="/learnBlazor/BindProp">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Bind Prop 22
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Data Binding-OneWay 
             </a>
         </div>
     </nav>
