--- a/LearnBlazor/LearnBlazor/Components/Pages/LearnBlazor/BindProp.razor
+++ b/LearnBlazor/LearnBlazor/Components/Pages/LearnBlazor/BindProp.razor
@@ -4,15 +4,45 @@
 
 <h3>Product - One Way Data Binding</h3>
 
-Name: @product.Name <br/>
-Active: @product.IsActive
+Name: @Product.Name <br />
+Active: @Product.IsActive <br />
+Price: @Product.Price <br />
+This Product is: @(Product.IsActive ? "Active" : "InActive") <br />
 
+@* IsActive: <input type="checkbox" @bind-value="@Product.IsActive" checked="@(Product.IsActive ? "checked" : null)" /> *@
+IsActive: <input type="checkbox" @bind="@Product.IsActive" /> <br />
+
+@* Input Price: <input type="number" @bind="@Product.Price" @bind:event="oninput" /> <br/> *@
+Input Price: <input type="number" @bind-value="@Product.Price" @bind-value:event="oninput" />
+<br/>
+Product Properties:
+<select @bind="selectedProp">
+    @foreach (var prop in Product.ProductProperties)
+    {
+        <option value="@prop.Key">@prop.Value</option>
+    }
+</select>
+<br/>
+Selected Property: @selectedProp
+<br/>
+@if(!string.IsNullOrEmpty(selectedProp))
+{
+    <p>Selected Value: @Product.ProductProperties.FirstOrDefault(u => u.Key == selectedProp).Value</p>
+}
 
 @code {
-    Models.Product product = new ()
+    private string selectedProp = "";
+
+    Models.Product Product = new ()
     {
         Id = 1,
         Name = "Product 1",
-        IsActive = true
+        IsActive = false,
+        Price = 5,
+        ProductProperties = new List<Models.Product_Prop>(){
+            new Models.Product_Prop { Id=1, Key="Color", Value="Red" },
+            new Models.Product_Prop { Id=2, Key="Size", Value="20oz" },
+            new Models.Product_Prop { Id=3, Key="Flavour", Value="Rose" }
+        }
     };
 }
