Binding Product Table to Product Summary

--- a/LearnBlazor/LearnBlazor/Components/Pages/LearnBlazor/BindProp.razor
+++ b/LearnBlazor/LearnBlazor/Components/Pages/LearnBlazor/BindProp.razor
@@ -57,6 +57,15 @@
                 }
             </tbody>
         </table>
+
+        <br/>
+        <br/>
+        <br/>
+        <h2>Product Summary</h2>
+        @foreach (var prod in Products)
+        {
+            <p>@prod.Name [@prod.Price] is @(prod.IsActive ? "Active":"InActive")</p>
+        }
     </div>
 </div>
 
