--- a/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
@@ -31,6 +31,13 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Data Binding-OneWay 
             </a>
         </div>
+
+        <div class="nav-item px-3">
+            <a class="nav-link" href="/learnBlazor/DemoProduct">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Demo Product
+            </a>
+        </div>
+
     </nav>
 </div>
 
