--- a/LearnBlazor/LearnBlazor/Components/_Imports.razor
+++ b/LearnBlazor/LearnBlazor/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using LearnBlazor
 @using Models
+@using LearnBlazor.Components.Pages.Learn_Blazor.LearnBlazorComponents
