--- a/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
@@ -27,21 +27,28 @@
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/learnBlazor/BindProp">
+            <NavLink class="nav-link" href="/learnBlazor/BindProp">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Data Binding-OneWay 
-            </a>
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/learnBlazor/DemoProduct">
+            <NavLink class="nav-link" href="/learnBlazor/DemoProduct">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Demo Product
-            </a>
+            </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/learnBlazor/parentComponent">
+            <NavLink class="nav-link" href="/learnBlazor/parentComponent">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Parent / Child Relation
-            </a>
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            @* <NavLink class="nav-link" href="/learnrouting#targetElement" Match="NavLinkMatch.All"> *@
+            <NavLink class="nav-link" href="/learnrouting?Param=Learn&Param1=Blazor" Match="NavLinkMatch.Prefix">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Learn Routing
+            </NavLink>
         </div>
 
     </nav>
