--- a/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+       @*  <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
@@ -24,7 +24,7 @@
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
-        </div>
+        </div> *@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/learnBlazor/BindProp">
@@ -48,6 +48,12 @@
             @* <NavLink class="nav-link" href="/learnrouting#targetElement" Match="NavLinkMatch.All"> *@
             <NavLink class="nav-link" href="/learnrouting?Param=Learn&Param1=Blazor" Match="NavLinkMatch.Prefix">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Learn Routing
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/blazorjs">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Blazor JS
             </NavLink>
         </div>
 
