--- a/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
+++ b/LearnBlazor/LearnBlazor/Components/Layout/NavMenu.razor
@@ -63,6 +63,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/blazor-forms">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Blazor FORMS
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
