--- a/YumBlazor/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -21,7 +21,9 @@ else
         <div class="card-body p-4">
             <div class="row pb-3">
                 <div class="col-12 text-end">
-                    <button class="btn btn-lg btn-secondary" style="width:250px">Add New Category</button>
+                    <a href="category/create" class="btn btn-lg btn-secondary" style="width:250px">
+                        <i class="bi bi-plus-square"></i> Add New Category
+                    </a>
                 </div>
             </div>
             <p>Category's List</p>
@@ -39,7 +41,12 @@ else
                         {
                             <tr>
                                 <td>@category.Name</td>
-                                <td>Buttons</td>
+                                <td>
+                                    <a href="@($"category/update/{category.Id}")" class="btn btn-primary">
+                                        <i class="bi bi-pencil-square"></i> Edit
+                                    </a>
+                                    <button class="btn btn-danger"><i class="bi bi-trash3"></i> Delete</button>
+                                </td>
                             </tr>
                         }
                     </tbody>
