Section-12 Category CRUD

--- a/YumBlazor/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -1,5 +1,12 @@
 ﻿@page "/category"
-@inject ICategoryRepository _categoryRepository;
+@inject ICategoryRepository _categoryRepository
+@inject IJSRuntime _JS
+
+<BsModal OnModalConfirmation="ConfirmDelete_Click"
+    ButtonBootstrapStyle="btn-danger"
+    ButtonText="Delete"
+    Title="Are you sure you want to delete this Category?">
+</BsModal>
 
 @if(IsProcessing)
 {
@@ -45,7 +52,9 @@ else
                                     <a href="@($"category/update/{category.Id}")" class="btn btn-primary">
                                         <i class="bi bi-pencil-square"></i> Edit
                                     </a>
-                                    <button class="btn btn-danger"><i class="bi bi-trash3"></i> Delete</button>
+                                    <button class="btn btn-danger" @onclick="() => HandleDelete(category.Id)">
+                                        <i class="bi bi-trash3"></i> Delete
+                                    </button>
                                 </td>
                             </tr>
                         }
@@ -61,6 +70,7 @@ else
 @code {
     private bool IsProcessing { get; set; } = true;
     private IEnumerable<Category> Categories { get; set; } = new List<Category>();
+    private int DeleteCategoryId { get; set; } = 0;
 
     protected override async Task OnInitializedAsync()
     {
@@ -81,5 +91,29 @@ else
     {
         Categories = await _categoryRepository.GetAllAsync();
         //LoadCategories
+    }
+
+    private async void HandleDelete(int id)
+    {
+        //Delete Category
+        DeleteCategoryId = id;
+        _JS.InvokeVoidAsync("ShowConfirmationModal");
+    }
+
+    private async Task ConfirmDelete_Click(bool isConfirmed)
+    {
+        IsProcessing = true;
+        await _JS.InvokeVoidAsync("HideConfirmationModal");
+        if(isConfirmed && DeleteCategoryId != 0)
+        {
+            var result = await _categoryRepository.DeleteAsync(DeleteCategoryId);
+            if (result)
+                _JS?.ToastrSuccess("Category Deleted Successfully");
+            else
+                _JS?.ToastrError("Error Encountered while deleting");
+            await LoadCategories();
+        }
+        DeleteCategoryId = 0;
+        IsProcessing = false;
     }
 }
